# rub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILL.md  cliff.toml
crates/rub-cdp/: Cargo.toml
crates/rub-cdp/src/: adapter.rs  attachment.rs  browser.rs  content_find.rs  controls.rs  cookies.rs  dialogs.rs  dom.rs  downloads.rs  environment_profile.rs  evaluation.rs  fingerprint_profile.rs  frame_runtime.rs  gestures.rs  humanize.rs  identity_coverage.rs  identity_policy.rs  identity_probe.rs  inspect.rs  interaction.rs  js.rs  keyboard.rs  keys.rs  lib.rs  listener_generation.rs  live_dom_locator.rs  managed_browser.rs  network_rules.rs  observation_scope.rs  page.rs  pointer.rs  profile.rs  projection.rs  read_query.rs  request_correlation.rs  runtime.rs  runtime_observatory.rs  runtime_state.rs  snapshot_lookup.rs  stealth.rs  (+5 more)
crates/rub-cdp/src/adapter/: browser_port.rs  tests.rs
crates/rub-cdp/src/browser/: control.rs  runtime_authority.rs  runtime_callbacks.rs  tests.rs
crates/rub-cdp/src/dom/: diff.rs  scripts.rs  tests.rs
crates/rub-cdp/src/gestures/: tests.rs
crates/rub-cdp/src/interaction/: confirmation.rs  observation.rs  preflight.rs
crates/rub-cdp/src/page/: display.rs  navigation.rs  tests.rs
crates/rub-cdp/src/request_correlation/: tests.rs
crates/rub-cdp/src/runtime_observatory/: pending_requests.rs  tests.rs
crates/rub-cdp/src/runtime_state/: tests.rs
crates/rub-cdp/src/stealth/: patches.rs  tests.rs
crates/rub-cdp/src/tab_projection/: hooks.rs  tabs.rs  tests.rs
crates/rub-cdp/src/targeting/: tests.rs
crates/rub-cli/: Cargo.toml  build.rs
crates/rub-cli/src/: binding_ctl.rs  binding_execution_ctl.rs  binding_memory_ctl.rs  cleanup_ctl.rs  commands.rs  connection_hardening.rs  daemon_ctl.rs  explain_ctl.rs  extract_help_ctl.rs  harvest_ctl.rs  inspect_list_help_ctl.rs  internal_daemon.rs  local_asset_paths.rs  local_registry.rs  main.rs  main_dispatch.rs  main_support.rs  orchestration_assets.rs  output.rs  persisted_artifacts.rs  secret_ctl.rs  session_policy.rs  teardown_ctl.rs  timeout_budget.rs  workflow_assets.rs  workflow_params.rs
crates/rub-cli/src/binding_ctl/: capture.rs  projection.rs  registry.rs  tests.rs
crates/rub-cli/src/binding_execution_ctl/: tests.rs
crates/rub-cli/src/binding_memory_ctl/: registry.rs  tests.rs
crates/rub-cli/src/cleanup_ctl/: current_home.rs  projection.rs  temp_runtime.rs  temp_sweep.rs  upgrade_probe.rs
crates/rub-cli/src/commands/: args.rs  config.rs  enums.rs  subcommands.rs
crates/rub-cli/src/daemon_ctl/: bootstrap.rs  close_all.rs  close_existing.rs  compatibility.rs  connect.rs  handshake.rs  ipc.rs  process_identity.rs  process_lifecycle.rs  projection.rs  registry.rs  replay.rs  startup.rs  tests.rs
crates/rub-cli/src/harvest_ctl/: source.rs
crates/rub-cli/src/internal_daemon/: browser_bootstrap.rs  browser_callbacks.rs  observatory_ingress.rs  startup_bootstrap.rs  startup_inputs.rs  startup_reporting.rs
crates/rub-cli/src/main/: tests.rs
crates/rub-cli/src/orchestration_assets/: tests.rs
crates/rub-cli/src/output/: continuity.rs  tests.rs
crates/rub-cli/src/secret_ctl/: input.rs  store.rs  tests.rs
crates/rub-cli/src/session_policy/: identity.rs  projection.rs  request.rs  validation.rs
crates/rub-cli/src/timeout_budget/: budget.rs  helpers.rs  projection_support.rs  subcommands.rs  tests.rs  workflow_budget.rs
crates/rub-cli/src/workflow_assets/: export.rs  listing.rs  write.rs
crates/rub-cli/tests/: e2e.rs
crates/rub-cli/tests/e2e/: foundation.rs  integration.rs  orchestration_runtime.rs  runtime_integration.rs  state_workflow.rs  trigger_runtime.rs  workflow_extract_storage.rs
crates/rub-cli/tests/support/: download_fixture.rs  mod.rs  network_fixture.rs
crates/rub-daemon/: Cargo.toml
crates/rub-daemon/src/: daemon.rs  dialogs.rs  downloads.rs  extract_contract.rs  frame_runtime.rs  handoff.rs  health.rs  history.rs  interaction_trace.rs  interference.rs  interference_classifier.rs  interference_policy.rs  interference_recovery.rs  lib.rs  locator_memo.rs  observatory.rs  orchestration_assets.rs  orchestration_executor.rs  orchestration_probe.rs  orchestration_runtime.rs  orchestration_worker.rs  readiness.rs  router.rs  rub_paths.rs  runtime_refresh.rs  runtime_state_projection.rs  scheduler_policy.rs  session.rs  state_inspector.rs  storage_runtime.rs  takeover.rs  trigger.rs  trigger_worker.rs  trigger_workflow_bridge.rs  workflow_assets.rs  workflow_capture.rs  workflow_params.rs  workflow_policy.rs
crates/rub-daemon/src/daemon/: io.rs  projection.rs  shutdown.rs  tests.rs
crates/rub-daemon/src/downloads/: events.rs  mutation.rs  projection.rs
crates/rub-daemon/src/interference/: baseline.rs  recovery.rs
crates/rub-daemon/src/interference_classifier/: tests.rs
crates/rub-daemon/src/observatory/: events.rs  projection.rs  requests.rs
crates/rub-daemon/src/orchestration_executor/: action_request.rs  dispatch.rs  outcome.rs  protocol.rs  retry.rs  target.rs  target_tests.rs  tests.rs
crates/rub-daemon/src/orchestration_probe/: local.rs  matching.rs  remote.rs  tests.rs
crates/rub-daemon/src/orchestration_runtime/: events.rs  mutation.rs  projection.rs  sessions.rs
crates/rub-daemon/src/orchestration_worker/: condition.rs  tests.rs
crates/rub-daemon/src/router/: addressing.rs  artifacts.rs  automation_fence.rs  diagnostics.rs  dialogs.rs  dispatch.rs  downloads.rs  element_semantics.rs  extract.rs  extract_postprocess.rs  find.rs  frame_scope.rs  frames.rs  history.rs  inspect.rs  interaction.rs  interference.rs  navigation.rs  network_inspection.rs  observation_filter.rs  observation_scope.rs  observe.rs  orchestration.rs  policy.rs  projection.rs  query.rs  (+16 more)
crates/rub-ipc/: Cargo.toml
crates/rub-ipc/src/: client.rs  codec.rs  handshake.rs  lib.rs  protocol.rs  server.rs
crates/rub-ipc/tests/: contract_test.rs
crates/rub-test-harness/: Cargo.toml
crates/rub-test-harness/src/: assert.rs  browser_session.rs  download_fixture.rs  fixtures.rs  lib.rs  network_fixture.rs  server.rs
(+230 files in other folders)
