[workspace]
resolver = "2"
members = [
    "crates/rub-core",
    "crates/rub-ipc",
    "crates/rub-cdp",
    "crates/rub-daemon",
    "crates/rub-cli",
    "crates/rub-test-harness",
]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
description = "Browser automation CLI built for AI agents"
homepage = "https://github.com/QingChang1204/rub"
repository = "https://github.com/QingChang1204/rub"
keywords = ["browser", "automation", "cli", "agent", "cdp"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.12"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# UUID (v7 timestamp-ordered)
uuid = { version = "1.23.0", features = ["v7", "serde"] }

# CLI
clap = { version = "4.5.38", features = ["derive", "env"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CDP browser control
chromiumoxide = "0.9.1"

# Async trait
async-trait = "0.1"

# Base64 encoding (screenshots)
base64 = "0.22"

# Futures utilities
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# System calls
libc = "0.2"

# Config parsing
toml = "0.8"

# Timestamps / RFC3339 formatting + canonical parsing
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# A GitHub repo to push Homebrew formulas to
tap = "QingChang1204/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Read release notes from CHANGELOG.md (populated by git-cliff before each release)
changelog = "CHANGELOG.md"

[profile.release]
lto = true
strip = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
