[package]
name = "rub-cdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rub-core = { version = "0.1.0", path = "../rub-core" }
chromiumoxide.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
base64.workspace = true
futures.workspace = true
time.workspace = true
libc.workspace = true
