[package]
name = "rub-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rub-core = { version = "0.1.0", path = "../rub-core" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
serial_test = "3.2.0"
