[package]
name = "rub-test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
rub-core = { version = "0.1.0", path = "../rub-core" }
rub-daemon = { version = "0.1.0", path = "../rub-daemon" }
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
libc.workspace = true
